# wav2vec2

./: .gitignore  Cargo.toml
src/: main.rs
src/components/: config.rs  ctc.rs  encoder.rs  feature_extractor.rs  mod.rs  processor.rs  util.rs
src/configs/: vocab.json  wav2vec2-base-group.json  wav2vec2-base-layer.json
src/external_weights/: group-model.pth  layer-model.pth
