[package]
name = "wav2vec2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
burn = { version = "0.15", features = ["candle", "tch"] }
burn-import = { version = "0.15", features = ["pytorch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
num-traits = { version = "0.2" }
